--- a/OdysseyEditor/App.config
+++ b/OdysseyEditor/App.config
@@ -11,7 +11,7 @@
     <userSettings>
         <OdysseyEditor.Properties.Settings>
             <setting name="GamePath" serializeAs="String">
-                <value/>
+                <value />
             </setting>
             <setting name="OnlyKnwonObjs" serializeAs="String">
                 <value>False</value>
@@ -44,6 +44,9 @@
                 <value>True</value>
             </setting>
             <setting name="DownloadDb" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="FirstStart" serializeAs="String">
                 <value>True</value>
             </setting>
         </OdysseyEditor.Properties.Settings>
