--- a/OdysseyEditor/Properties/Settings.settings
+++ b/OdysseyEditor/Properties/Settings.settings
@@ -38,5 +38,8 @@
     <Setting Name="DownloadDb" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="FirstStart" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
