Fix SARC packing and Byaml creation. keep settings in new versions.

--- a/OdysseyEditor/App.config
+++ b/OdysseyEditor/App.config
@@ -49,6 +49,9 @@
             <setting name="FirstStart" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="UpgradeSettings" serializeAs="String">
+                <value>True</value>
+            </setting>
         </OdysseyEditor.Properties.Settings>
     </userSettings>
 </configuration>
