--- a/OdysseyEditor/Properties/Settings.settings
+++ b/OdysseyEditor/Properties/Settings.settings
@@ -41,5 +41,8 @@
     <Setting Name="FirstStart" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="UpgradeSettings" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
