--- a/BnTxx/BnTxx.csproj
+++ b/BnTxx/BnTxx.csproj
@@ -1,21 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="14.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{9313D751-0D97-4621-B6E2-783E6986A118}</ProjectGuid>
+    <ProjectGuid>{9675F3DE-DF52-4750-9222-BA7707F1566E}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>BfresLib</RootNamespace>
-    <AssemblyName>BfresLib</AssemblyName>
+    <RootNamespace>BnTxx</RootNamespace>
+    <AssemblyName>BnTxx</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <NuGetPackageImportStamp>
-    </NuGetPackageImportStamp>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -25,6 +24,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -32,30 +32,33 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
-    <Reference Include="System.Windows.Forms" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BFRES.cs" />
-    <Compile Include="BfresConverter.cs" />
-    <Compile Include="FileData.cs" />
-    <Compile Include="FileOutput.cs" />
+    <Compile Include="ASTC.cs" />
+    <Compile Include="BCn.cs" />
+    <Compile Include="BlockLinearSwizzle.cs" />
+    <Compile Include="Formats\BinaryTexture.cs" />
+    <Compile Include="Formats\ChannelType.cs" />
+    <Compile Include="Formats\PatriciaTree.cs" />
+    <Compile Include="Formats\PatriciaTreeNode.cs" />
+    <Compile Include="Formats\Texture.cs" />
+    <Compile Include="Formats\TextureFormatType.cs" />
+    <Compile Include="Formats\TextureFormatVar.cs" />
+    <Compile Include="Formats\TextureType.cs" />
+    <Compile Include="ISwizzle.cs" />
+    <Compile Include="PixelDecoder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\BnTxx\BnTxx.csproj">
-      <Project>{9675f3de-df52-4750-9222-ba7707f1566e}</Project>
-      <Name>BnTxx</Name>
-    </ProjectReference>
+    <Compile Include="Formats\InvalidSignatureException.cs" />
+    <Compile Include="Utilities\BitUtils.cs" />
+    <Compile Include="Utilities\IOUtils.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
