multiselection editing, Add/Remove properties, edit bymls, Hotkey to swap camera mode, configurable draw distance

--- a/OdysseyEditor/App.config
+++ b/OdysseyEditor/App.config
@@ -52,6 +52,9 @@
             <setting name="UpgradeSettings" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="FarPlaneDistance" serializeAs="String">
+                <value>100000</value>
+            </setting>
         </OdysseyEditor.Properties.Settings>
     </userSettings>
 </configuration>
