--- a/OdysseyExt.csproj
+++ b/OdysseyExt.csproj
@@ -16,7 +16,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\..\EditorCore\bin\Debug\Ext\</OutputPath>
+    <OutputPath>..\..\EditorCore\EditorCore\bin\Debug\Ext\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -32,7 +32,7 @@
   <ItemGroup>
     <Reference Include="PresentationCore" />
     <Reference Include="Syroot.BinaryData, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Syroot.IO.BinaryData.2.0.0\lib\net45\Syroot.BinaryData.dll</HintPath>
+      <HintPath>..\..\EditorCore\packages\Syroot.IO.BinaryData.2.0.0\lib\net45\Syroot.BinaryData.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -95,19 +95,19 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\FileFormatPlugins\BfresLib\BfresLib.csproj">
+    <ProjectReference Include="..\..\EditorCore\FileFormatPlugins\BfresLib\BfresLib.csproj">
       <Project>{9313D751-0D97-4621-B6E2-783E6986A118}</Project>
       <Name>BfresLib</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\FileFormatPlugins\ByamlLib\ByamlExt.csproj">
+    <ProjectReference Include="..\..\EditorCore\FileFormatPlugins\ByamlLib\ByamlExt.csproj">
       <Project>{6d1801b8-7b24-49d6-83a1-e21ccc280d8e}</Project>
       <Name>ByamlExt</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\EditorCore\EditorCore.csproj">
+    <ProjectReference Include="..\..\EditorCore\EditorCore\EditorCore.csproj">
       <Project>{df37f616-9cb6-4594-b30a-d5dd52ee1b3e}</Project>
       <Name>EditorCore</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\FileFormatPlugins\SARCLib\SARCExt.csproj">
+    <ProjectReference Include="..\..\EditorCore\FileFormatPlugins\SARCLib\SARCExt.csproj">
       <Project>{9c220305-e452-4db0-9f99-186640268b4f}</Project>
       <Name>SARCExt</Name>
     </ProjectReference>
