Adding option to export all klcs from an object as .obj s

--- a/OdysseyExt.csproj
+++ b/OdysseyExt.csproj
@@ -108,6 +108,10 @@
       <Project>{df37f616-9cb6-4594-b30a-d5dd52ee1b3e}</Project>
       <Name>EditorCore</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\EditorCore\FileFormatPlugins\KCLExt\KCLExt.csproj">
+      <Project>{148f75f5-d3f0-4b69-8528-528c5215b351}</Project>
+      <Name>KCLExt</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\EditorCore\FileFormatPlugins\SARCLib\SARCExt.csproj">
       <Project>{9c220305-e452-4db0-9f99-186640268b4f}</Project>
       <Name>SARCExt</Name>
