--- a/OdysseyExt.csproj
+++ b/OdysseyExt.csproj
@@ -108,6 +108,7 @@
     <ProjectReference Include="..\..\EditorCore\EditorCore\EditorCore.csproj">
       <Project>{df37f616-9cb6-4594-b30a-d5dd52ee1b3e}</Project>
       <Name>EditorCore</Name>
+      <Private>False</Private>
     </ProjectReference>
     <ProjectReference Include="..\..\EditorCore\FileFormatPlugins\KCLExt\KCLExt.csproj">
       <Project>{148f75f5-d3f0-4b69-8528-528c5215b351}</Project>
