--- a/OdysseyExt.csproj
+++ b/OdysseyExt.csproj
@@ -80,6 +80,12 @@
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <Compile Include="Rails.cs" />
+    <Compile Include="StageSelectionForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="StageSelectionForm.Designer.cs">
+      <DependentUpon>StageSelectionForm.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="EditorForms\AddObjList.resx">
@@ -94,6 +100,9 @@
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="StageSelectionForm.resx">
+      <DependentUpon>StageSelectionForm.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
