--- a/OdysseyExt.csproj
+++ b/OdysseyExt.csproj
@@ -30,6 +30,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\..\EditorCore\packages\Newtonsoft.Json.11.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="Syroot.BinaryData, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\EditorCore\packages\Syroot.IO.BinaryData.2.0.0\lib\net45\Syroot.BinaryData.dll</HintPath>
@@ -72,6 +75,7 @@
     <Compile Include="KclExport.cs" />
     <Compile Include="Level.cs" />
     <Compile Include="LevelObj.cs" />
+    <Compile Include="ObjDatabase.cs" />
     <Compile Include="OdysseyExt.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
@@ -131,6 +135,7 @@
   <ItemGroup>
     <None Include="packages.config" />
     <None Include="Resources\baseModels.zip" />
+    <None Include="Resources\OdysseyDB.json" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
