--- a/packages.config
+++ b/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
   <package id="Syroot.IO.BinaryData" version="2.0.0" targetFramework="net461" />
   <package id="Syroot.Maths" version="1.4.0" targetFramework="net461" />
 </packages>
