--- a/OdysseyExt.csproj
+++ b/OdysseyExt.csproj
@@ -53,6 +53,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DebugOnlyStuff\GrabObjectData.cs" />
+    <Compile Include="EditorForms\AddObjectDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="EditorForms\AddObjectDialog.Designer.cs">
+      <DependentUpon>AddObjectDialog.cs</DependentUpon>
+    </Compile>
     <Compile Include="EditorForms\AddObjList.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -92,6 +98,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="EditorForms\AddObjectDialog.resx">
+      <DependentUpon>AddObjectDialog.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="EditorForms\AddObjList.resx">
       <DependentUpon>AddObjList.cs</DependentUpon>
     </EmbeddedResource>
